--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,17 @@
   background-color: darkgray;
   border-radius: 20px;
 }
+
+body::-webkit-scrollbar {
+  width: 7px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #8998e2;
+  border-radius: 100px;
+}
