--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,12 @@ body::-webkit-scrollbar-thumb {
   background-color: #8998e2;
   border-radius: 100px;
 }
+
+.text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
